Tidy Swagger
