# docs/swagger.json
@@ -1,13 +1,12 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server Petstore server.",
-        "title": "Swagger Example API",
-        "termsOfService": "http://swagger.io/terms/",
+        "description": "Go boiler plate with Oauth2 implementation, documented with Swagger",
+        "title": "Oauth2 API Documentation",
         "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
+            "name": "Meruya Technology",
+            "url": "https://blog.meruyatechnology.com",
+            "email": "support@meruyatechnology.com"
         },
         "license": {
             "name": "Apache 2.0",
@@ -15,10 +14,10 @@
         },
         "version": "1.0"
     },
-    "host": "petstore.swagger.io",
-    "basePath": "/v2",
+    "host": "http://localhost:8080",
+    "basePath": "/api",
     "paths": {
-        "/test/user": {
+        "/get_profile": {
             "get": {
                 "description": "getProfile",
                 "consumes": [
@@ -29,31 +28,13 @@
                 ],
                 "summary": "Add a new pet to the store",
                 "operationId": "get-profile",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Some ID",
-                        "name": "some_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Some ID",
-                        "name": "some_id",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entities.User"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
-                        "description": "desc",
+                        "description": "Success response",
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/base.BaseResponse"
+                                    "$ref": "#/definitions/base.SuccessResponse"
                                 },
                                 {
                                     "type": "object",
@@ -65,13 +46,107 @@
                                 }
                             ]
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/base.BadRequestError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/base.UnauthorizedError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbiden",
+                        "schema": {
+                            "$ref": "#/definitions/base.ForbidenError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/base.NotFoundError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/base.InternalServerError"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
-        "base.BaseResponse": {
+        "base.BadRequestError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Bad Request"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 400
+                }
+            }
+        },
+        "base.ForbidenError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Forbiden Access"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 403
+                }
+            }
+        },
+        "base.InternalServerError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Internal Server Error"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 500
+                }
+            }
+        },
+        "base.NotFoundError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Not Found"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 404
+                }
+            }
+        },
+        "base.SuccessResponse": {
             "type": "object",
             "properties": {
                 "code": {
@@ -79,10 +154,28 @@
                 },
                 "data": {},
                 "message": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Success"
                 },
                 "status": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 200
+                }
+            }
+        },
+        "base.UnauthorizedError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Unauthorized"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 401
                 }
             }
         },
